--- a/zft_1/html/index.htm
+++ b/zft_1/html/index.htm
@@ -8,7 +8,6 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <title>中付通</title>
 <link rel="stylesheet" type="text/css" href="../css/index2015.css">
-<link rel="icon" href="../images/favicon.ico" type="image/x-icon" />
 <script type="text/javascript" src="../js/detect_7aa5fd4.js"></script>
 </head>
 
@@ -19,38 +18,41 @@
     <div class="toolbar-tab toolbar-tab-fhdb"><a href="javascript:_bannerMove(0);_scrollNum(0);"><i class="tab-ico"></i><em class="tab-text">返回顶部</em><span class="tab-sub"></span></a></div>
   </div>
 </div>
-<div class="container">
-  <div class="header">
-    <div class="top-bar">
-      <div class="top-bar-inner">
-        <div class="top-user"> <span class="user-greet">欢迎来到中付通！</span>
-          <div class="user-login-info" id="logininfo"> </div>
-          <a href="#" class="user-link">关于我们</a> </div>
-        <div class="top-extra"> <span class="extra-link">客服电话：400-000-0000</span> </div>
-      </div>
-    </div>
-    <div class="header-main">
-      <div class="clearfloat header-main-inner">
-        <div class="logo"> <a href="http://www.zft.com/"><img src="../images/logo.gif" alt="中付通"></a> </div>
-        <div class="nav">
-          <ul class="nav-list">
-            <li class="nav-item"> <a href="#" class="nav-link nav-link-current">首页</a> </li>
-            <li class="nav-item"> <a href="user-center.html" class="nav-link">账户中心</a> </li>
-            <li class="nav-item"> <a href="#" class="nav-link" target="_blank">我的余额</a> </li>
-            <li class="nav-item"> <a href="#" class="nav-link" target="_blank">应用中心</a> </li>
-            <li class="nav-item"> <a href="#" class="nav-link">安全中心</a> </li>
-            <li class="nav-item"> <a href="#" class="nav-link">关于我们</a> </li>
-          </ul>
+<div class="container"> 
+  <!--header-->
+  <div class="top-fixed"></div>
+  <div class="top-wrap">
+    <div class="top-content clearfix">
+      <p class="phone">400-000-3588</p>
+      <p class="platform-link"> <a href="#">域名管理平台</a>| <a href="#">域名交易平台</a>| <a href="#">域名论坛</a>| <a href="#">域名门户</a>| <a href="#">商标版权</a> </p>
+      <!--未登录-->
+      <div class="not-login" style="display:none"> <a href="#" class="login">登录</a> <a href="#" class="reg">注册</a> </div>
+      <!--登录后-->
+        <div class="logged">
+            <p class="user-name">ADMIN<i></i></p>
         </div>
+      <p class="msg-center">站内消息（<a href="#" class="color-orange">12</a>）</p>
+      <a href="#" class="wohis">WOHIS查询</a> </div>
+  </div>
+  <!--header-nav-->
+  <div class="nav-wrap">
+    <div class="nav-content clearfix"> <a href="javascript:;" class="yijie-logo"></a>
+      <div class="nav-right">
+        <ul class="top-nav">
+          <li class="active"> <a href="#" target="_blank">网站首页</a> </li>
+          <li> <a href="#" target="_blank">域名注册</a> </li>
+          <li> <a href="#" target="_blank">域名交易</a> </li>
+          <li> <a href="#" target="_blank">我的账户</a> </li>
+        </ul>
       </div>
     </div>
   </div>
-  <!--end header -->
+  <!--header end-->
   
   <div class="main">
     <div class="index-slide">
       <div style="margin-top: -763px;" class="slide-page">
-        <div style="height: 763px;" class="slide-page-item slide-page-item-active"> <img style="height: 820px; margin-top: -28.5px;" src="../images/banner01.jpg" alt="" class="slide-page-img" height="820" width="1600">
+        <div style="height: 763px;" class="slide-page-item slide-page-item-active"> <img src="../images/banner01.jpg" alt="" class="slide-page-img" height="732" width="1600">
           <div class="slide-move-box"> <a href="#"><img src="../images/kll-tit00.png" alt="" class="kll-tit00"></a> <a href="#"><img src="../images/kll-tit01.png" alt="" class="kll-tit01"></a> </div>
           <div class="slide-page-btm">
             <div style="display: none;" class="transparent-bg"></div>
@@ -59,7 +61,7 @@
             </div>
           </div>
         </div>
-        <div style="height: 763px;" class="slide-page-item"> <img style="height: 820px; margin-top: -28.5px;" src="../images/banner00.jpg" alt="" class="slide-page-img" height="820" width="1600">
+        <div style="height: 763px;" class="slide-page-item"> <img style="margin-top: -28.5px;" src="../images/banner00.jpg" alt="" class="slide-page-img" height="820" width="1600">
           <div class="slide-move-box"> <img src="../images/kdy-tit00.png" alt="" class="kdy-tit00"> <img src="../images/kdy-tit01.png" alt="" class="kdy-tit01"> <img src="../images/kdy-tit02-item01.png" alt="" class="kdy-tit02-item01"> <img src="../images/kdy-tit02-item02.png" alt="" class="kdy-tit02-item02"> <img src="../images/kdy-tit02-item03.png" alt="" class="kdy-tit02-item03"> <img src="../images/kdy-sign.png" alt="" class="kdy-sign">
             <div class="login-register"> <a href="#" class="btn login-btn">登 录</a> <a href="#" class="btn register-btn">立即注册</a> </div>
             <a href="#" class="product-link kdy-link" target="_blank"><span>查看详情</span><b class="arrow"></b></a> </div>
@@ -92,7 +94,7 @@
             </div>
           </div>
         </div>
-        <div style="height: 763px;" class="slide-page-item"> <img style="height: 820px; margin-top: -28.5px;" src="../images/banner03.jpg" alt="" class="slide-page-img" height="820" width="1600">
+        <div style="height: 763px;" class="slide-page-item"> <img style="margin-top: -28.5px;" src="../images/banner03.jpg" alt="" class="slide-page-img" height="734" width="1600">
           <div class="slide-move-box"> <img src="../images/hand-app-sign.png" alt="" class="hand-app-sign"> <img src="../images/hand-app-tit01.png" alt="" class="hand-app-tit01"> <img src="../images/hand-app-tit02.png" alt="" class="hand-app-tit02"> <a href="#" class="product-link hand-app-link" target="_blank"><span>查看详情</span><b class="arrow"></b></a> </div>
           <div class="slide-page-btm">
             <div style="display: none;" class="transparent-bg"></div>
@@ -106,69 +108,57 @@
             </div>
           </div>
         </div>
-        <div style="height: 763px;" class="slide-page-item">
-          <div class="website-cooperate-notice">
-            <div class="cooperate-notice">
-              <div class="cooperate">
-                <div class="clearfloat cooperate-hd">
-                  <h3 class="cooperate-tit">合作机构</h3>
-                  <a href="#" class="cooperate-more" target="_blank">更多</a> </div>
-                <div class="cooperate-bd">
-                  <ul class="clearfloat bank-list">
-                    <li class="bank-item"><a href="#" target="_blank"><img src="../images/bank-gongshang.jpg" alt=""></a></li>
-                    <li class="bank-item"><a href="#" target="_blank"><img src="../images/bank-nongye.jpg" alt=""></a></li>
-                    <li class="bank-item"><a href="#" target="_blank"><img src="../images/bank-jianshe.jpg" alt=""></a></li>
-                    <li class="bank-item"><a href="#" target="_blank"><img src="../images/bank-zhongguo.jpg" alt=""></a></li>
-                    <li class="bank-item"><a href="#" target="_blank"><img src="../images/bank-zhaoshang.jpg" alt=""></a></li>
-                    <li class="bank-item"><a href="#" target="_blank"><img src="../images/bank-youzheng.jpg" alt=""></a></li>
-                    <li class="bank-item"><a href="#" target="_blank"><img src="../images/bank-guangfa.jpg" alt=""></a></li>
-                    <li class="bank-item"><a href="#" target="_blank"><img src="../images/bank-pufa.jpg" alt=""></a></li>
-                    <li class="bank-item"><a href="#" target="_blank"><img src="../images/bank-guangda.jpg" alt=""></a></li>
-                    <li class="bank-item"><a href="#" target="_blank"><img src="../images/bank-yinlian.jpg" alt=""></a></li>
-                    <li class="bank-item"><a href="#" target="_blank"><img src="../images/bank-visa.jpg" alt=""></a></li>
-                    <li class="bank-item"><a href="#" target="_blank"><img src="../images/bank-master.jpg" alt=""></a></li>
-                  </ul>
-                </div>
+        <div style="height: 763px;" class="slide-page-item"> 
+          <!--footer-->
+          <div class="footer-help-wrap">
+            <div class="footer-help clearfix">
+              <div class="phone">
+                <p class="phone-num">400-000-3588</p>
+                <p>（周一至周五工作时间8:30~17:30）</p>
+                <p class="service"> <a href="http://wpa.b.qq.com/cgi/wpa.php?ln=1&key=XzkzODAyNTczOF8zMzM2OTdfNDAwMDAwMzU4OF8yXw" target="_blank">在线客服</a> <a href="#">客服邮箱</a> <a href="#">留言反馈</a> </p>
               </div>
-              <div class="clearfloat notice">
-                <div class="notice-news">
-                  <div class="website-service">
-                    <h4 class="website-service-tit">服务热线<span>（周一到周五：9:00-18:00）</span></h4>
-                    <p class="website-service-number">400-000-0000</p>
-                    <p>客服邮箱 (仅限业务办理)： </p>
-                    <p><a href="#">4000000000@163。com</a></p>
-                    <p>客服电子邮箱：<a href="#">4000000@163.com</a></p>
-                  </div>
-                  <div class="website-qr-code">
-                    <ul class="clearfloat qr-code-list">
-                      <li class="qr-code-item">
-                        <p><img src="../images/footer-qr-code01.jpg" alt="" class="qr-code-img"></p>
-                        <p>中付通公司官方微信 <br>
-                          订阅号：zhongfuotng</p>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="website-qr-code">
-                    <ul class="clearfloat qr-code-list">
-                      <li class="qr-code-item">
-                        <p><img src="../images/footer-qr-code02.jpg" alt="" class="qr-code-img"></p>
-                        <p>中付通微信服务中心 <br>
-                          服务号：zhongfutong</p>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="notice-ad"> <a href="#" target="_blank"><img class="" src="../images/ppmoney_150708_310.jpg" alt="PPMONEY" border="0"></a> </div>
-              </div>
+              <dl>
+                <dt>关于我们</dt>
+                <dd><a href="#">易域简介</a></dd>
+                <dd><a href="#">服务条款</a></dd>
+                <dd><a href="#">网站荣誉</a></dd>
+                <dd><a href="#">联系方式</a></dd>
+              </dl>
+              <dl>
+                <dt>业务介绍</dt>
+                <dd><a href="#">会员申请</a></dd>
+                <dd><a href="#">域名注册</a></dd>
+                <dd><a href="#">模板管理</a></dd>
+                <dd><a href="#">域名续费</a></dd>
+                <dd><a href="#">域名PUSH</a></dd>
+              </dl>
+              <dl>
+                <dt>服务说明</dt>
+                <dd><a href="#">资费说明</a></dd>
+                <dd><a href="#">平台管理</a></dd>
+              </dl>
+              <dl>
+                <dt>帮助中心</dt>
+                <dd><a href="#">如何注册</a></dd>
+                <dd><a href="#">如何投资</a></dd>
+                <dd><a href="#">常见问题</a></dd>
+                <dd><a href="#">网站地图</a></dd>
+              </dl>
             </div>
           </div>
-          <div class="website-footer">
-            <div class="about">
-              <div class="clearfloat website-footer-main"> <a href="#" target="_blank">关于中付通</a> | <a href="#" target="_blank">新闻中心</a> | <a href="#" target="_blank">合作机构</a> | <a href="#" target="_blank">联系中付通</a> | <a href="#" target="_blank">诚聘英才</a> | <a href="#" target="_blank">网站地图</a> </div>
-              <div class="website-copyright"> <span class="year">中付通版权所有2004-2015</span> <a href="#" target="_blank" class="icp">ICP证：全国B2-20060204</a> <a href="#" target="_blank" class="id">京B2-20100011</a> </div>
-              <div class="clearfloat website-certs"> <a href="#" class="certs-item certs-item01" target="_blank"></a> <a href="#" class="certs-item certs-item02" target="_blank"></a> <a href="#" class="certs-item certs-item03" target="_blank"></a> <a href="#" class="certs-item certs-item04" target="_blank"></a> <a href="#" class="certs-item certs-item05" target="_blank"></a> <a href="#" class="certs-item certs-item06" target="_blank"></a> <a href="#" class="certs-item certs-item07" target="_blank"></a> <a href="#" class="certs-item certs-item08" target="_blank"></a> <a href="#" class="certs-item certs-item09" target="_blank"></a> </div>
+          <p class="footer-link"> <a href="#">常见问题</a>| <a href="#">隐私政策</a>| <a href="#">友情链接</a>| <a href="#">关于我们</a>| <a href="#">Whois查询</a>| <a href="#">注册人权利与责任</a> </p>
+          <div class="footer-copyright">
+            <div class="footer-jz">
+              <p class="my-links"> <a target="_blank" href="http://www.yijie.com" title="易介网">易介网</a>| <a target="_blank" href="http://www.domain.cn" title="域名城">域名城</a>| <a target="_blank" href="http://www.yiyu.com" title="易域网">易域网</a>| <a target="_blank" href="http://www.biwo.com" title="必握">必握网</a>| <a target="_blank" href="http://www.HiParking.com" title="HiParking">HiParking</a>| <a target="_blank" href="http://www.ipchina.com" title="中华知识产权网">中华知识产权网</a>| <a target="_blank" href="http://vip.ipchina.com" title="易介知识产权">易介知识产权</a>| <a target="_blank" href="http://www.networkbrand.com" title="网络品牌">网络品牌</a>| <a target="_blank" href="http://www.doname.com" title="DoName">DoName</a>| <a target="_blank" class="border-r-no" href="http://club.domain.cn" title="域名论坛">域名论坛</a> </p>
+              <p>域名注册服务批准文号：工信部电函[2008]223号 京ICP备：14042779号 北京市公安局海淀分局备案编号：京公网安备11011502002426号</p>
+              <p>Copyright © 2006-2015 YIJIE.COM（www.yijie.com）版权所有 官方Q群：3066209(客服群) 89505380 88428315</p>
+              <p>客服电话：010-82617730-1122/108 联系邮箱：service@biwo.com 工作时间：周一至周五 09:00-12:00,13:30-18:00</p>
+              <p> <a href="#"><img src="../images/btn_02.jpg"></a> <a href="#"><img src="../images/btn_06.jpg"></a> <a href="#"><img src="../images/btn_08.jpg"></a> <a href="#"><img src="../images/btn_09.jpg"></a> <a href="#"><img src="../images/btn_04.jpg"></a> </p>
             </div>
           </div>
+          
+          <!--footer end--> 
+          
         </div>
       </div>
       <div class="slide-focus"> <a class="focus-item" href="javascript:;"></a> <a class="focus-item focus-item-active" href="javascript:;"></a> <a class="focus-item" href="javascript:;"></a> <a class="focus-item" href="javascript:;"></a> </div>
