--- a/zft_1/html/footer.html
+++ b/zft_1/html/footer.html
@@ -4,20 +4,87 @@
 <meta charset="utf-8">
 <title>footer</title>
 <link href="../css/css.css" rel="stylesheet" type="text/css">
+<link href="../css/index2015.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 <!--footer-->
-<p  class="footer-link"> <a href="#">常见问题</a>&nbsp; |&nbsp; <a href="#">隐私政策</a>&nbsp; |&nbsp; <a href="#">友情链接</a>&nbsp; |&nbsp; <a href="#">关于我们</a>&nbsp; |&nbsp; <a href="#">Whois查询</a>&nbsp; |&nbsp; <a href="#">注册人权利与责任</a> </p>
-<div class="footer-copyright">
-  <div class="footer-jz">
-    <p> <a target="_blank" href="http://www.yijie.com" title="易介网">易介网</a> <a target="_blank" href="http://www.domain.cn" title="域名城">域名城</a> <a target="_blank" href="http://www.yiyu.com" title="易域网">易域网</a> <a target="_blank" href="http://www.biwo.com" title="必握">必握网</a> <a target="_blank" href="http://www.HiParking.com" title="HiParking">HiParking</a> <a target="_blank" href="http://www.ipchina.com" title="中华知识产权网">中华知识产权网</a> <a target="_blank" href="http://vip.ipchina.com" title="易介知识产权">易介知识产权</a> <a target="_blank" href="http://www.networkbrand.com" title="网络品牌">网络品牌</a> <a target="_blank" href="http://www.doname.com" title="DoName">DoName</a> <a target="_blank" class="border-r-no" href="http://club.domain.cn" title="域名论坛">域名论坛</a> </p>
-    <p>域名注册服务批准文号：工信部电函[2008]223号 京ICP备：14042779号 北京市公安局海淀分局备案编号：京公网安备11011502002426号</p>
-    <p>Copyright © 2006-2015 YIJIE.COM（www.yijie.com）版权所有 官方Q群：3066209(客服群) 89505380 88428315</p>
-    <p>客服电话：010-82617730-1122/108 联系邮箱：service@biwo.com 工作时间：周一至周五 09:00-12:00,13:30-18:00</p>
-    <p> <a href="#"><img src="../images/btn_04.jpg"></a> <a href="#"><img src="../images/btn_06.jpg"></a> <a href="#"><img src="../images/btn_08.jpg"></a> <a href="#"><img src="../images/btn_09.jpg"></a> </p>
-  </div>
+<div class="footer-help-wrap">
+    <div class="footer-help clearfix">
+        <div class="phone">
+            <p class="phone-num">400-000-3588</p>
+            <p>（周一至周五工作时间8:30~17:30）</p>
+            <p class="service">
+                <a href="http://wpa.b.qq.com/cgi/wpa.php?ln=1&key=XzkzODAyNTczOF8zMzM2OTdfNDAwMDAwMzU4OF8yXw" target="_blank">在线客服</a>
+                <a href="#">客服邮箱</a>
+                <a href="#">留言反馈</a>
+            </p>
+        </div>
+        <dl>
+            <dt>关于我们</dt>
+            <dd><a href="#">易域简介</a></dd>
+            <dd><a href="#">服务条款</a></dd>
+            <dd><a href="#">网站荣誉</a></dd>
+            <dd><a href="#">联系方式</a></dd>
+        </dl>
+        <dl>
+            <dt>业务介绍</dt>
+            <dd><a href="#">会员申请</a></dd>
+            <dd><a href="#">域名注册</a></dd>
+            <dd><a href="#">模板管理</a></dd>
+            <dd><a href="#">域名续费</a></dd>
+            <dd><a href="#">域名PUSH</a></dd>
+        </dl>
+        <dl>
+            <dt>服务说明</dt>
+            <dd><a href="#">资费说明</a></dd>
+            <dd><a href="#">平台管理</a></dd>
+        </dl>
+        <dl>
+            <dt>帮助中心</dt>
+            <dd><a href="#">如何注册</a></dd>
+            <dd><a href="#">如何投资</a></dd>
+            <dd><a href="#">常见问题</a></dd>
+            <dd><a href="#">网站地图</a></dd>
+        </dl>
+    </div>
 </div>
+<p class="footer-link">
+    <a href="#">常见问题</a>|
+    <a href="#">隐私政策</a>|
+    <a href="#">友情链接</a>|
+    <a href="#">关于我们</a>|
+    <a href="#">Whois查询</a>|
+    <a href="#">注册人权利与责任</a>
+</p>
+<div class="footer-copyright">
+    <div class="footer-jz">
+        <p class="my-links">
+            <a target="_blank" href="http://www.yijie.com" title="易介网">易介网</a>|
+            <a target="_blank" href="http://www.domain.cn" title="域名城">域名城</a>|
+            <a target="_blank" href="http://www.yiyu.com" title="易域网">易域网</a>|
+            <a target="_blank" href="http://www.biwo.com" title="必握">必握网</a>|
+            <a target="_blank" href="http://www.HiParking.com" title="HiParking">HiParking</a>|
+            <a target="_blank" href="http://www.ipchina.com" title="中华知识产权网">中华知识产权网</a>|
+            <a target="_blank" href="http://vip.ipchina.com" title="易介知识产权">易介知识产权</a>|
+            <a target="_blank" href="http://www.networkbrand.com" title="网络品牌">网络品牌</a>|
+            <a target="_blank" href="http://www.doname.com" title="DoName">DoName</a>|
+            <a target="_blank" class="border-r-no" href="http://club.domain.cn" title="域名论坛">域名论坛</a>  
+        </p>
+        <p>域名注册服务批准文号：工信部电函[2008]223号 京ICP备：14042779号 北京市公安局海淀分局备案编号：京公网安备11011502002426号</p>
+        <p>Copyright © 2006-2015 YIJIE.COM（www.yijie.com）版权所有 官方Q群：3066209(客服群) 89505380 88428315</p>
+        <p>客服电话：010-82617730-1122/108 联系邮箱：service@biwo.com 工作时间：周一至周五 09:00-12:00,13:30-18:00</p>
+        <p>
+           <a href="#"><img src="../images/btn_02.jpg"></a>
+           <a href="#"><img src="../images/btn_06.jpg"></a>
+           <a href="#"><img src="../images/btn_08.jpg"></a>
+           <a href="#"><img src="../images/btn_09.jpg"></a>
+           <a href="#"><img src="../images/btn_04.jpg"></a>   
+        </p>
+    </div>
+</div>
+
+
 <!--footer end-->
 </body>
 </html>
