--- a/html/chognzhi.html
+++ b/html/chognzhi.html
@@ -6,6 +6,7 @@
 <link href="../css/index2015.css" rel="stylesheet" type="text/css">
 <link href="../css/css.css" rel="stylesheet" type="text/css">
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon" />
+<script type="text/jscript" src="../js/jquery.js"></script>
 </head>
 
 <body>
@@ -56,5 +57,14 @@
 </div>
 
 <!--footer end-->
+<script type="text/javascript">
+	$(document).ready(function(){
+		$(".zfb-cz span").on("click",function(){
+			 $(this).addClass('active');
+			});
+       
+
+    });
+</script>
 </body>
 </html>
