--- a/html/cz-1.html
+++ b/html/cz-1.html
@@ -17,7 +17,8 @@
 <!--main-->
 <div class="main">
   <div class="cz-cg">
-    <h1><span></span><b>充值成功</b></h1>
+    <h1><span class="pay1"></span><b>充值成功</b></h1>
+    <h1><span class="pay2"></span><b>充值失败</b></h1>
     <p>充值序列号：XNCJV30492039423</p>
     <p>充值金额：<span>1000</span>元</p>
     <div class="cz-kj"> 你还可以： <a href="#">继续充值</a> | <a href="#">充值记录</a> | <a href="#">返回我的中付通</a> </div>
