--- a/html/footer.html
+++ b/html/footer.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>footer</title>
+<link href="../css/public.css" rel="stylesheet" type="text/css">
 <link href="../css/css.css" rel="stylesheet" type="text/css">
 <link href="../css/index2015.css" rel="stylesheet" type="text/css">
 </head>
@@ -71,9 +72,9 @@
             <a target="_blank" href="http://www.doname.com" title="DoName">DoName</a>|
             <a target="_blank" class="border-r-no" href="http://club.domain.cn" title="域名论坛">域名论坛</a>  
         </p>
-        <p>域名注册服务批准文号：工信部电函[2008]223号 京ICP备：14042779号 北京市公安局海淀分局备案编号：京公网安备11011502002426号</p>
-        <p>Copyright © 2006-2015 YIJIE.COM（www.yijie.com）版权所有 官方Q群：3066209(客服群) 89505380 88428315</p>
-        <p>客服电话：010-82617730-1122/108 联系邮箱：service@biwo.com 工作时间：周一至周五 09:00-12:00,13:30-18:00</p>
+        <p>网站备案/许可证号：京ICP备10003495号-37</p>
+        <p>Copyright © 2006-2016 ZFT.COM（www.zft.com）版权所有</p>
+        <p>客服电话：400-000-3588 联系邮箱：service@zft.com 工作时间：周一至周五 09:00-12:00,13:30-18:00</p>
         <p>
            <a href="#"><img src="../images/btn_02.jpg"></a>
            <a href="#"><img src="../images/btn_06.jpg"></a>
