--- a/html/tx.html
+++ b/html/tx.html
@@ -9,7 +9,7 @@
 <script type="text/jscript" src="../js/tab.js"></script>
 </head>
 
-<body>
+<body class="">
 <!--head-->
 <iframe src="head.html" width="100%" height="120px" frameborder="0"></iframe>
 <!--当前位置-->
@@ -163,7 +163,6 @@
 </div>
 </div>
 </div>
-<div class="gg"><a href="#"><img src="../images/gg-pic2.png"/></a></div>
 <!--footer-->
 <div>
   <iframe src="footer.html" width="100%" height="120px" frameborder="0" ></iframe>
