--- a/html/index.htm
+++ b/html/index.htm
@@ -7,6 +7,7 @@
 <meta name="renderer" content="webkit">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <title>中付通</title>
+<link rel="stylesheet" type="text/css" href="../css/public.css">
 <link rel="stylesheet" type="text/css" href="../css/index2015.css">
 <script type="text/javascript" src="../js/detect_7aa5fd4.js"></script>
 </head>
@@ -20,33 +21,8 @@
 </div>
 <div class="container"> 
   <!--header-->
-  <div class="top-fixed"></div>
-  <div class="top-wrap">
-    <div class="top-content clearfix">
-      <p class="phone">400-000-3588</p>
-      <p class="platform-link"> <a href="#">域名管理平台</a>| <a href="#">域名交易平台</a>| <a href="#">域名论坛</a>| <a href="#">域名门户</a>| <a href="#">商标版权</a> </p>
-      <!--未登录-->
-      <div class="not-login" style="display:none"> <a href="#" class="login">登录</a> <a href="#" class="reg">注册</a> </div>
-      <!--登录后-->
-        <div class="logged">
-            <p class="user-name">ADMIN<i></i></p>
-        </div>
-      <p class="msg-center">站内消息（<a href="#" class="color-orange">12</a>）</p>
-      <a href="#" class="wohis">WOHIS查询</a> </div>
-  </div>
-  <!--header-nav-->
-  <div class="nav-wrap">
-    <div class="nav-content clearfix"> <a href="javascript:;" class="yijie-logo"></a>
-      <div class="nav-right">
-        <ul class="top-nav">
-          <li class="active"> <a href="#" target="_blank">网站首页</a> </li>
-          <li> <a href="#" target="_blank">域名注册</a> </li>
-          <li> <a href="#" target="_blank">域名交易</a> </li>
-          <li> <a href="#" target="_blank">我的账户</a> </li>
-        </ul>
-      </div>
-    </div>
-  </div>
+  <iframe src="head.html" width="100%" height="120px"frameborder="0"></iframe>
+  
   <!--header end-->
   
   <div class="main">
@@ -110,52 +86,7 @@
         </div>
         <div style="height: 763px;" class="slide-page-item"> 
           <!--footer-->
-          <div class="footer-help-wrap">
-            <div class="footer-help clearfix">
-              <div class="phone">
-                <p class="phone-num">400-000-3588</p>
-                <p>（周一至周五工作时间8:30~17:30）</p>
-                <p class="service"> <a href="http://wpa.b.qq.com/cgi/wpa.php?ln=1&key=XzkzODAyNTczOF8zMzM2OTdfNDAwMDAwMzU4OF8yXw" target="_blank">在线客服</a> <a href="#">客服邮箱</a> <a href="#">留言反馈</a> </p>
-              </div>
-              <dl>
-                <dt>关于我们</dt>
-                <dd><a href="#">易域简介</a></dd>
-                <dd><a href="#">服务条款</a></dd>
-                <dd><a href="#">网站荣誉</a></dd>
-                <dd><a href="#">联系方式</a></dd>
-              </dl>
-              <dl>
-                <dt>业务介绍</dt>
-                <dd><a href="#">会员申请</a></dd>
-                <dd><a href="#">域名注册</a></dd>
-                <dd><a href="#">模板管理</a></dd>
-                <dd><a href="#">域名续费</a></dd>
-                <dd><a href="#">域名PUSH</a></dd>
-              </dl>
-              <dl>
-                <dt>服务说明</dt>
-                <dd><a href="#">资费说明</a></dd>
-                <dd><a href="#">平台管理</a></dd>
-              </dl>
-              <dl>
-                <dt>帮助中心</dt>
-                <dd><a href="#">如何注册</a></dd>
-                <dd><a href="#">如何投资</a></dd>
-                <dd><a href="#">常见问题</a></dd>
-                <dd><a href="#">网站地图</a></dd>
-              </dl>
-            </div>
-          </div>
-          <p class="footer-link"> <a href="#">常见问题</a>| <a href="#">隐私政策</a>| <a href="#">友情链接</a>| <a href="#">关于我们</a>| <a href="#">Whois查询</a>| <a href="#">注册人权利与责任</a> </p>
-          <div class="footer-copyright">
-            <div class="footer-jz">
-              <p class="my-links"> <a target="_blank" href="http://www.yijie.com" title="易介网">易介网</a>| <a target="_blank" href="http://www.domain.cn" title="域名城">域名城</a>| <a target="_blank" href="http://www.yiyu.com" title="易域网">易域网</a>| <a target="_blank" href="http://www.biwo.com" title="必握">必握网</a>| <a target="_blank" href="http://www.HiParking.com" title="HiParking">HiParking</a>| <a target="_blank" href="http://www.ipchina.com" title="中华知识产权网">中华知识产权网</a>| <a target="_blank" href="http://vip.ipchina.com" title="易介知识产权">易介知识产权</a>| <a target="_blank" href="http://www.networkbrand.com" title="网络品牌">网络品牌</a>| <a target="_blank" href="http://www.doname.com" title="DoName">DoName</a>| <a target="_blank" class="border-r-no" href="http://club.domain.cn" title="域名论坛">域名论坛</a> </p>
-              <p>域名注册服务批准文号：工信部电函[2008]223号 京ICP备：14042779号 北京市公安局海淀分局备案编号：京公网安备11011502002426号</p>
-              <p>Copyright © 2006-2015 YIJIE.COM（www.yijie.com）版权所有 官方Q群：3066209(客服群) 89505380 88428315</p>
-              <p>客服电话：010-82617730-1122/108 联系邮箱：service@biwo.com 工作时间：周一至周五 09:00-12:00,13:30-18:00</p>
-              <p> <a href="#"><img src="../images/btn_02.jpg"></a> <a href="#"><img src="../images/btn_06.jpg"></a> <a href="#"><img src="../images/btn_08.jpg"></a> <a href="#"><img src="../images/btn_09.jpg"></a> <a href="#"><img src="../images/btn_04.jpg"></a> </p>
-            </div>
-          </div>
+          <iframe src="footer.html" width="100%" height="120px" frameborder="0" ></iframe>
           
           <!--footer end--> 
           
@@ -166,7 +97,7 @@
   </div>
   <!--end main --> 
 </div>
-<script src="../js/jquery-1.js"></script> 
+<script src="../js/jquery.js"></script> 
 <script src="../js/scroll.js"></script> 
 <script>
     $(function(){
