--- a/html/user-center.html
+++ b/html/user-center.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>我的中付通</title>
+<link href="../css/public.css" rel="stylesheet" type="text/css">
 <link href="../css/index2015.css" rel="stylesheet" type="text/css">
 <link href="../css/css.css" rel="stylesheet" type="text/css">
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon" />
@@ -136,7 +137,7 @@
   <div class="page"> <span>1-20条</span> <a href="#">首页</a> <a href="#">上一页</a> <a href="#">1</a> <a href="#">2</a> <a href="#">3</a> <a href="#">4</a> <a href="#">下一页</a> <a href="#">尾页</a> </div>
   <p class="ck-qb"><a href="#" class="blue">查看全部记录>></a></p>
 </div>
-<div class="gg2"><a href="#"><img src="../images/gg-pic2.png"/></a></div>
+
 <!--footer-->
 <div>
   <iframe src="footer.html" width="100%" height="120px" frameborder="0" ></iframe>
