财务列表添加查询按钮

--- a/html/zh-jy-jl.html
+++ b/html/zh-jy-jl.html
@@ -41,7 +41,6 @@
               </li>
             </ul>
           </div>
-          <div id="counts"> </div>
         </form>
         <div class="jy-lx">
           <p class="filter-label">类型分类：</p>
@@ -61,6 +60,7 @@
             <li><a href="#">失败</a></li>
           </ul>
         </div>
+        <a href="#" class="chaxun">查询</a>
       </div>
       <table class="am-table1">
         <thead>
@@ -135,7 +135,6 @@
               </li>
             </ul>
           </div>
-          <div id="counts"> </div>
         </form>
         <div class="jy-lx">
           <p>交易状态：</p>
@@ -147,6 +146,7 @@
             <li><a href="#">失败</a></li>
           </ul>
         </div>
+        <a href="#" class="chaxun">查询</a>
       </div>
       <table class="am-table1">
         <thead>
@@ -216,7 +216,6 @@
               </li>
             </ul>
           </div>
-          <div id="counts"> </div>
         </form>
         <div class="jy-lx">
           <p>交易状态：</p>
@@ -229,6 +228,7 @@
             <li><a href="#">取消</a></li>
           </ul>
         </div>
+        <a href="#" class="chaxun">查询</a>
       </div>
       <table class="am-table1">
         <thead>
@@ -286,10 +286,9 @@
               </li>
             </ul>
           </div>
-          <div id="counts"> </div>
+          <a href="#" class="chaxun">查询</a>
         </form>
-        <div id="counts"> </div>
-        </m>
+        
       </div>
       <table class="am-table1">
         <thead>
